force-app/main/default/objects/Opportunity/fields/Address_Receive__c.field-meta.xml
<CustomField>
    <fullName>Address_Receive__c</fullName>
    <label>Address Receive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>