force-app/main/default/objects/Opportunity/fields/Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Amount_Original__c</fullName>
    <label>Amount Original</label>
    <summarizedField>OpportunityLineItem.Total_Amount_Original__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>