force-app/main/default/objects/Opportunity/fields/AP44Price__c.field-meta.xml
<CustomField>
    <fullName>AP44Price__c</fullName>
    <label>AP44Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>