force-app/main/default/objects/Opportunity/fields/Asset_insurance__c.field-meta.xml
<CustomField>
    <fullName>Asset_insurance__c</fullName>
    <label>Asset insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>