force-app/main/default/objects/Opportunity/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Kawasaki</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>