force-app/main/default/objects/Opportunity/fields/Buy_PCA__c.field-meta.xml
<CustomField>
    <fullName>Buy_PCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy PCA</label>
    <type>Checkbox</type>
</CustomField>