force-app/main/default/objects/Opportunity/fields/Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Month__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE( CreatedDate )))&amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Month</label>
    <type>Text</type>
</CustomField>