force-app/main/default/objects/Opportunity/fields/Call_Deadlead__c.field-meta.xml
<CustomField>
    <fullName>Call_Deadlead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark Opportunity CS called to take care after deadlead</inlineHelpText>
    <label>Call Deadlead</label>
    <type>Checkbox</type>
</CustomField>