force-app/main/default/objects/Opportunity/fields/Civil_liability_insurance__c.field-meta.xml
<CustomField>
    <fullName>Civil_liability_insurance__c</fullName>
    <label>Civil liability insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil liability insurance</fullName>
            </value>
            <value>
                <fullName
        >Civil liability insurance + Accident Insurance for 2 person (10 millions/person)</fullName>
                <label
        >Civil liability insurance + Accident Insurance for 2 person (10 millions/person)</label>
            </value>
            <value>
                <fullName
        >Civil liability insurance + Accident Insurance for 2 person (20 millions/person)</fullName>
                <label
        >Civil liability insurance + Accident Insurance for 2 person (20 millions/person)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>