force-app/main/default/objects/Opportunity/fields/Close_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reason__c</fullName>
    <label>Close Lost  Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor lead</fullName>
                <label>Date Delivery</label>
            </value>
            <value>
                <fullName>No need</fullName>
                <label>Customer Service</label>
            </value>
            <value>
                <fullName>Products</fullName>
                <label>Product &amp; Chosen Competitor</label>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
                <isActive>false</isActive>
                <label>Timing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>