force-app/main/default/objects/Opportunity/fields/Close_Opty_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Opty_Date__c</fullName>
    <label>Close Opty Date</label>
    <type>Date</type>
</CustomField>