force-app/main/default/objects/Opportunity/fields/Create_from_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Create_from_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create from Campaign</label>
    <type>Checkbox</type>
</CustomField>