force-app/main/default/objects/Opportunity/fields/CS_Comment__c.field-meta.xml
<CustomField>
    <fullName>CS_Comment__c</fullName>
    <label>CS Comment</label>
    <type>TextArea</type>
</CustomField>