force-app/main/default/objects/Opportunity/fields/CS_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Review_Date__c</fullName>
    <label>CS Review Date</label>
    <type>Date</type>
</CustomField>