force-app/main/default/objects/Opportunity/fields/Daily_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Rate__c</fullName>
    <formula>Monthly_Interest_Rate__c *12/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>