force-app/main/default/objects/Opportunity/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <formula>Account.PersonContact.DOB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>