force-app/main/default/objects/Opportunity/fields/Debt_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Debt_Payment_Date__c</fullName>
    <label>Debt Payment Date</label>
    <type>Date</type>
</CustomField>