force-app/main/default/objects/Opportunity/fields/Delivery_Installation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Installation__c</fullName>
    <label>Delivery/ Installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>