force-app/main/default/objects/Opportunity/fields/Deposit_type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_type__c</fullName>
    <label>Deposit type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First-time buyer</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>