force-app/main/default/objects/Opportunity/fields/District_Receive__c.field-meta.xml
<CustomField>
    <fullName>District_Receive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District Receive</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Opportunities (District Receive)</relationshipLabel>
    <relationshipName>Opportunities_DistrictReceive</relationshipName>
    <type>Lookup</type>
</CustomField>