force-app/main/default/objects/Opportunity/fields/DO_DL_Code__c.field-meta.xml
<CustomField>
    <fullName>DO_DL_Code__c</fullName>
    <formula>IF( Is_CMS__c  = True,  Order_WebCommercal__r.dealer_code__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO/DL Code</label>
    <type>Text</type>
</CustomField>