force-app/main/default/objects/Opportunity/fields/DODL_Create__c.field-meta.xml
<CustomField>
    <fullName>DODL_Create__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO DL Create</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>DO/DLR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (DODL Create)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>