force-app/main/default/objects/Opportunity/fields/Down_payment__c.field-meta.xml
<CustomField>
    <fullName>Down_payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Down payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>