force-app/main/default/objects/Opportunity/fields/E_commerce_Order__c.field-meta.xml
<CustomField>
    <fullName>E_commerce_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-commerce Order</label>
    <type>Checkbox</type>
</CustomField>