force-app/main/default/objects/Opportunity/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <formula>Owner.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee</label>
    <type>Text</type>
</CustomField>