force-app/main/default/objects/Opportunity/fields/Employee_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Employee_Instruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Instruction</label>
    <referenceTo>EmployeeInstruction__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>