force-app/main/default/objects/Opportunity/fields/Estimate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Amount__c</fullName>
    <label>Estimate Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>