force-app/main/default/objects/Opportunity/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <label>Finance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>