force-app/main/default/objects/Opportunity/fields/Follow_Fail__c.field-meta.xml
<CustomField>
    <fullName>Follow_Fail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow Fail</label>
    <referenceTo>Follow_Fail__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>