force-app/main/default/objects/Opportunity/fields/Frame_No__c.field-meta.xml
<CustomField>
    <fullName>Frame_No__c</fullName>
    <formula>Order__r.Frame_No1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frame No</label>
    <type>Text</type>
</CustomField>