force-app/main/default/objects/Opportunity/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <label>Gift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>