force-app/main/default/objects/Opportunity/fields/HasContractOrder__c.field-meta.xml
<CustomField>
    <fullName>HasContractOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasContractOrder</label>
    <type>Checkbox</type>
</CustomField>