force-app/main/default/objects/Opportunity/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>