force-app/main/default/objects/Opportunity/fields/Interest_amount_per_month__c.field-meta.xml
<CustomField>
    <fullName>Interest_amount_per_month__c</fullName>
    <formula>Total_interest_amount__c / Loan_period__c</formula>
    <label>Interest amount per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>