force-app/main/default/objects/Opportunity/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>