force-app/main/default/objects/Opportunity/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <formula>Order__r.Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>