force-app/main/default/objects/Opportunity/fields/Invoice_Date_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Calendar_Month__c</fullName>
    <formula>TEXT(MONTH(Order__r.Invoice_Date__c))&amp; &quot;/&quot; &amp; TEXT(YEAR(Order__r.Invoice_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date (Calendar Month)</label>
    <type>Text</type>
</CustomField>