force-app/main/default/objects/Opportunity/fields/Invoice_In_Month__c.field-meta.xml
<CustomField>
    <fullName>Invoice_In_Month__c</fullName>
    <formula>IF( Invoice_Date_Calendar_Month__c  =  Calendar_Month__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice In Month</label>
    <type>Checkbox</type>
</CustomField>