force-app/main/default/objects/Opportunity/fields/Is_CMS__c.field-meta.xml
<CustomField>
    <fullName>Is_CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CMS</label>
    <type>Checkbox</type>
</CustomField>