force-app/main/default/objects/Opportunity/fields/Is_DO_DL__c.field-meta.xml
<CustomField>
    <fullName>Is_DO_DL__c</fullName>
    <formula>IF( ISBLANK( DO_DL_Owner__c ) ,&apos;0&apos;,&apos;1&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is DO/DL</label>
    <type>Text</type>
</CustomField>