force-app/main/default/objects/Opportunity/fields/Is_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employee</label>
    <type>Checkbox</type>
</CustomField>