force-app/main/default/objects/Opportunity/fields/Is_Handover__c.field-meta.xml
<CustomField>
    <fullName>Is_Handover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Handover</label>
    <type>Checkbox</type>
</CustomField>