force-app/main/default/objects/Opportunity/fields/Is_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Is_Redeemed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Redeemed</label>
    <type>Checkbox</type>
</CustomField>