force-app/main/default/objects/Opportunity/fields/Is_Used_Bike__c.field-meta.xml
<CustomField>
    <fullName>Is_Used_Bike__c</fullName>
    <formula>Text(Product__r.Bike_Type_2__c) = &apos;Used&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Used Bike</label>
    <type>Checkbox</type>
</CustomField>