force-app/main/default/objects/Opportunity/fields/IsClosedLost__c.field-meta.xml
<CustomField>
    <fullName>IsClosedLost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the stage is of closed lost is true.</description>
    <label>IsClosedLost</label>
    <type>Checkbox</type>
</CustomField>