force-app/main/default/objects/Opportunity/fields/Loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_amount__c</fullName>
    <formula
  >Amount - Down_payment__c + (Loan_insurrance_rate__c *(Amount - Down_payment__c) * Loan_period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>