force-app/main/default/objects/Opportunity/fields/Loan_insurrance__c.field-meta.xml
<CustomField>
    <fullName>Loan_insurrance__c</fullName>
    <formula
  >Loan_insurrance_rate__c *(Amount - Down_payment__c) * Loan_period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan insurrance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>