force-app/main/default/objects/Opportunity/fields/Loan_insurrance_rate__c.field-meta.xml
<CustomField>
    <fullName>Loan_insurrance_rate__c</fullName>
    <defaultValue>0.06/100</defaultValue>
    <label>Loan insurrance rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>