force-app/main/default/objects/Opportunity/fields/Loan_limit__c.field-meta.xml
<CustomField>
    <fullName>Loan_limit__c</fullName>
    <defaultValue>80/100</defaultValue>
    <label>Loan limit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>