force-app/main/default/objects/Opportunity/fields/Loan_period__c.field-meta.xml
<CustomField>
    <fullName>Loan_period__c</fullName>
    <defaultValue>36</defaultValue>
    <label>Loan period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>