force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Date_Delivery</fullName>
                <label>Date Delivery</label>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
                <label>Product &amp; Chosen Competitor</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <label>Financing</label>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>