force-app/main/default/objects/Opportunity/fields/Mechandise_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mechandise_Amount__c</fullName>
    <label>Mechandise Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>