force-app/main/default/objects/Opportunity/fields/Monthly_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Interest_Rate__c</fullName>
    <defaultValue>12464/1000000</defaultValue>
    <label>Monthly Interest Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>