force-app/main/default/objects/Opportunity/fields/Monthly_principal_payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_principal_payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly principal payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>