force-app/main/default/objects/Opportunity/fields/Number_Plate_Fee__c.field-meta.xml
<CustomField>
    <fullName>Number_Plate_Fee__c</fullName>
    <label>Number Plate Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>