force-app/main/default/objects/Opportunity/fields/Opportunity_Bike__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Bike__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Bike</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Opportunity Bike)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>