force-app/main/default/objects/Opportunity/fields/Opportunity_Tradein__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Tradein__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Tradein</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities Tradein</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>