force-app/main/default/objects/Opportunity/fields/Opty_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Opty_Owner_Name__c</fullName>
    <formula>Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opty Owner Name</label>
    <type>Text</type>
</CustomField>