force-app/main/default/objects/Opportunity/fields/Opty_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opty_Owner_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <label>Opty Owner Role</label>
    <type>Text</type>
</CustomField>