force-app/main/default/objects/Opportunity/fields/Order_ID_CMS__c.field-meta.xml
<CustomField>
    <fullName>Order_ID_CMS__c</fullName>
    <formula>Order_WebCommercal__r.ID_Primary_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order ID CMS</label>
    <type>Text</type>
</CustomField>