force-app/main/default/objects/Opportunity/fields/Order_WebCommercal__c.field-meta.xml
<CustomField>
    <fullName>Order_WebCommercal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Ecommerce</label>
    <referenceTo>Order_WebCommercal__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>