force-app/main/default/objects/Opportunity/fields/OwnerShip_Tax1__c.field-meta.xml
<CustomField>
    <fullName>OwnerShip_Tax1__c</fullName>
    <formula>IF(Account.Province__r.Ownership_Tax__c&gt; 0, 
    SyncedQuote.Total_Origin__c  *  Account.Province__r.Ownership_Tax__c ,
       SyncedQuote.Total_Origin__c  *  Account.District__r.Ownership_Tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerShip Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>