force-app/main/default/objects/Opportunity/fields/Ownership_Tax__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Tax__c</fullName>
    <label>Ownership Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>