force-app/main/default/objects/Opportunity/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <formula>Order__r.Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>