force-app/main/default/objects/Opportunity/fields/Payment_OrderEcommerce__c.field-meta.xml
<CustomField>
    <fullName>Payment_OrderEcommerce__c</fullName>
    <formula>TEXT(Order_WebCommercal__r.Payment_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status&apos;s Payment Ecommerce</label>
    <type>Text</type>
</CustomField>