force-app/main/default/objects/Opportunity/fields/PCA_Type__c.field-meta.xml
<CustomField>
    <fullName>PCA_Type__c</fullName>
    <label>PCA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>P&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>