force-app/main/default/objects/Opportunity/fields/Plate_Fee__c.field-meta.xml
<CustomField>
    <fullName>Plate_Fee__c</fullName>
    <formula>IF( Account.Province__r.Number_Plate_Fee__c &gt; 0 , Account.Province__r.Number_Plate_Fee__c ,  IF(Account.District__r.Number_Plate_Fee__c &gt; 0, Account.District__r.Number_Plate_Fee__c, 50000)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plate Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>