force-app/main/default/objects/Opportunity/fields/Prepayment_penalty__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_penalty__c</fullName>
    <defaultValue>4/100</defaultValue>
    <label>Prepayment penalty</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>